# audiopipe

./: .gitignore  CONTRIBUTING.md  README.md  README.test.md  audio_utils.py  cleanup.py  conftest.py  dem.py  diarize.py  index.html  main.go  main.wasm  mypy.ini  pipeline.py  process_transcript.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  terminal-styles.css  types_models.py  visualize.py
.github/workflows/: ci.yml  test.yml
test/: conftest.py  test_integration.py
web/: README.md  index.html  sample_transcription.json  script.js  styles.css
web/wasm/: README.md  build.sh  go.mod  index.html  main.go  main.wasm  manifest.json  server.go  sw.js  terminal-styles.css
